--- a/paascloud-provider-uac/paascloud-provider-uac-dev.yml
+++ b/paascloud-provider-uac/paascloud-provider-uac-dev.yml
@@ -1,6 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/paascloud_uac?characterEncoding=utf8&useSSL=false
+    username: root
+    passowrd: 123456
 paascloud:
   security:
     social:
